# kivo-video

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  kivo_ev_test_41.json  tmp_final2.py  vcpkg.json
backend/: CMakeLists.txt
backend/architecture/: p3_architecture_policy.json  p3_direct_executable_matrix.json  p4_architecture_policy.json  p4_compatibility_matrix.json  p4_direct_executable_matrix.json  p4_type_ownership_table.md  p4_type_registry.json
backend/src/adapter_boundary/: adapter_boundary_contract.cpp
backend/src/audio_core/: fake_audio_endpoint_service.cpp  fake_audio_service.cpp
backend/src/audio_output/: decoded_audio_frame_converter.cpp  wasapi_shared_pcm_writer.cpp
backend/src/build_core/: fake_build_config_service.cpp
backend/src/byte_stream_core/: local_file_byte_stream_impl.cpp
backend/src/capability_core/: fake_playback_eligibility_service.cpp
backend/src/color_science_core/: fake_color_output_service.cpp  fake_hdr_color_service.cpp
backend/src/compliance_core/: fake_compliance_service.cpp  fake_dependency_security_service.cpp
backend/src/decision_ledger_core/: decision_ledger_store.cpp  replay_manifest.cpp
backend/src/decode_core/: fake_decode_path.cpp  fake_decode_runtime.cpp  fake_frame_queue_service.cpp  real_software_decode_runtime.cpp
backend/src/demux_core/: fake_demux_runtime.cpp  fake_probe_service.cpp  fake_stream_probe.cpp  real_demux_runtime.cpp  real_probe_runtime.cpp
backend/src/diagnostic_core/: diagnostic_redaction_gate.cpp  fake_crash_dump_privacy_service.cpp  fake_diagnostic_bundle_export.cpp  fake_telemetry_sampling_service.cpp
backend/src/disc_core/: fake_bdmv_main_title_service.cpp  fake_bdmv_playback_gate_service.cpp  fake_bdmv_playlist_duplicate_service.cpp  fake_bdmv_probe_service.cpp
backend/src/engine_api/: cancellation_token.cpp  command_queue.cpp  event_bus.cpp  fake_playback_command_service.cpp  state_snapshot_store.cpp
backend/src/fake_backend/: fake_engine_api_scenario.cpp  fake_session_scenario.cpp
backend/src/feature_gate_core/: fake_feature_flag_service.cpp  fake_feature_gate_service.cpp
backend/src/foundation/: contract_registry.cpp
backend/src/governance_core/: fake_claim_vocabulary_gate_service.cpp  fake_product_claim_service.cpp  fake_schema_migration_service.cpp
backend/src/graph_core/: fake_graph_runtime.cpp  graph_invariant.cpp
backend/src/integration_core/: fake_integration_gate_service.cpp
backend/src/media_timeline_core/: fake_master_clock_service.cpp  fake_timebase_service.cpp
backend/src/network_cache_core/: fake_cache_reader.cpp  fake_range_reader_service.cpp  fake_remote_direct_play_gate_service.cpp  fake_segment_cache_service.cpp
backend/src/parser_security_core/: fake_parser_security_service.cpp
backend/src/playback_core/: fake_playback_state_machine.cpp  playback_invariant.cpp  playback_session_state_machine.cpp
backend/src/playback_inspector_core/: fake_inspector_runtime_service.cpp  fake_inspector_service.cpp
backend/src/policy_core/: fake_policy_service.cpp
backend/src/preference_core/: fake_preference_service.cpp
backend/src/presenter/: presenter_boundary_shell.cpp
backend/src/quality_core/: fake_user_perceived_quality_service.cpp
backend/src/recovery_core/: fake_recovery_fallback_service.cpp
backend/src/release_core/: fake_release_readiness_service.cpp
backend/src/resource_core/: fake_memory_budget_service.cpp  fake_resource_budget_service.cpp
backend/src/scheduling_core/: fake_scheduling_service.cpp
backend/src/security_core/: fake_network_security_service.cpp
backend/src/session_core/: session_store.cpp
backend/src/signing_core/: fake_signing_service.cpp
backend/src/source_core/: fake_alist_direct_link_service.cpp  fake_alist_profile_service.cpp  fake_emby_direct_play_service.cpp  fake_emby_session_service.cpp  fake_file_identity_service.cpp  fake_local_file_source_service.cpp  fake_source_adapter_service.cpp  fake_source_health_service.cpp  fake_webdav_profile_service.cpp  fake_webdav_range_playback_service.cpp
backend/src/storage_core/: fake_database_resilience_service.cpp
backend/src/subtitle_core/: fake_subtitle_runtime_service.cpp  fake_subtitle_service.cpp
backend/src/symbol_core/: fake_symbol_service.cpp
backend/src/testing_core/: fake_test_oracle_service.cpp
backend/src/update_core/: fake_update_service.cpp
backend/src/video_render_core/: fake_flip_presenter_service.cpp  fake_presenter_service.cpp  fake_sdr_upload_service.cpp  fake_visual_quality_service.cpp
backend/src/video_upload/: d3d11_device_context.cpp  d3d11_texture_upload.cpp
backend/src/windows_hdr_core/: fake_windows_hdr_service.cpp
backend/tests/adapter_boundary/: adapter_boundary_test.cpp
backend/tests/audio_core/: audio_endpoint_test.cpp
backend/tests/audio_output/: decoded_audio_frame_converter_test.cpp  wasapi_shared_pcm_writer_test.cpp
backend/tests/audio_subtitle/: audio_subtitle_contract_test.cpp
backend/tests/build_signing_symbol_update/: build_signing_symbol_update_test.cpp
backend/tests/capability_core/: playback_eligibility_test.cpp
backend/tests/clock/: clock_av_sync_test.cpp
ui/: CMakeLists.txt
ui/playback/: playback_qml_resources.qrc
ui/playback/page/: VideoLayer.qml  (+1 more)
ui/shell/: PlaybackShellRoot.qml  playback_shell_continuous_playback_evidence.cpp  playback_shell_continuous_playback_evidence.hpp  playback_shell_interaction_evidence.cpp  playback_shell_interaction_evidence.hpp  playback_shell_main.cpp  playback_shell_media_resolver.cpp  playback_shell_media_resolver.hpp  playback_shell_playback_evidence.cpp  playback_shell_playback_evidence.hpp  playback_shell_qml_registration.cpp  playback_shell_qml_registration.hpp  playback_shell_qml_resources.qrc  playback_shell_qt_platform_bootstrap.hpp  playback_shell_runtime_adapter_bridge.cpp  playback_shell_runtime_adapter_bridge.hpp  playback_shell_runtime_context.cpp  playback_shell_runtime_context.hpp  playback_shell_snapshot_mapper.cpp  playback_shell_snapshot_mapper.hpp  playback_shell_video_surface_item.cpp  playback_shell_video_surface_item.hpp
(+2081 files in other folders)
