add_library(kivo_cinema_engine STATIC
  src/audio_core/fake_audio_service.cpp
  src/color_science_core/fake_color_output_service.cpp
  src/decode_core/fake_decode_path.cpp
  src/decode_core/fake_decode_runtime.cpp
  src/decode_core/fake_frame_queue_service.cpp
  src/decision_ledger_core/decision_ledger_store.cpp
  src/diagnostic_core/diagnostic_redaction_gate.cpp
  src/diagnostic_core/fake_diagnostic_bundle_export.cpp
  src/demux_core/fake_stream_probe.cpp
  src/demux_core/fake_probe_service.cpp
  src/demux_core/fake_demux_runtime.cpp
  src/engine_api/cancellation_token.cpp
  src/engine_api/command_queue.cpp
  src/engine_api/event_bus.cpp
  src/engine_api/state_snapshot_store.cpp
  src/decision_ledger_core/replay_manifest.cpp
  src/fake_backend/fake_engine_api_scenario.cpp
  src/foundation/contract_registry.cpp
  src/fake_backend/fake_session_scenario.cpp
  src/graph_core/fake_graph_runtime.cpp
  src/graph_core/graph_invariant.cpp
  src/network_cache_core/fake_cache_reader.cpp
  src/playback_core/fake_playback_state_machine.cpp
  src/playback_core/playback_invariant.cpp
  src/playback_core/playback_session_state_machine.cpp
  src/preference_core/fake_preference_service.cpp
  src/media_timeline_core/fake_timebase_service.cpp
  src/media_timeline_core/fake_master_clock_service.cpp
  src/engine_api/fake_playback_command_service.cpp
  src/source_core/fake_file_identity_service.cpp
  src/source_core/fake_local_file_source_service.cpp
  src/source_core/fake_source_adapter_service.cpp
  src/source_core/fake_source_health_service.cpp
  src/source_core/fake_webdav_profile_service.cpp
  src/source_core/fake_webdav_range_playback_service.cpp
  src/source_core/fake_alist_profile_service.cpp
  src/source_core/fake_alist_direct_link_service.cpp
  src/source_core/fake_emby_session_service.cpp
  src/playback_inspector_core/fake_inspector_service.cpp
  src/playback_inspector_core/fake_inspector_runtime_service.cpp
  src/policy_core/fake_policy_service.cpp
  src/compliance_core/fake_compliance_service.cpp
  src/feature_gate_core/fake_feature_gate_service.cpp
  src/resource_core/fake_resource_budget_service.cpp
  src/resource_core/fake_memory_budget_service.cpp
  src/scheduling_core/fake_scheduling_service.cpp
  src/adapter_boundary/adapter_boundary_contract.cpp
  src/capability_core/fake_playback_eligibility_service.cpp
  src/session_core/session_store.cpp
  src/subtitle_core/fake_subtitle_service.cpp
  src/video_render_core/fake_presenter_service.cpp
  src/video_render_core/fake_sdr_upload_service.cpp
  src/video_render_core/fake_visual_quality_service.cpp
  src/video_render_core/fake_flip_presenter_service.cpp
  src/audio_core/fake_audio_endpoint_service.cpp
  src/quality_core/fake_user_perceived_quality_service.cpp
  src/windows_hdr_core/fake_windows_hdr_service.cpp
  src/disc_core/fake_bdmv_probe_service.cpp
  src/disc_core/fake_bdmv_playlist_duplicate_service.cpp
  src/disc_core/fake_bdmv_main_title_service.cpp
  src/disc_core/fake_bdmv_playback_gate_service.cpp
  src/security_core/fake_network_security_service.cpp
  src/network_cache_core/fake_range_reader_service.cpp
  src/network_cache_core/fake_segment_cache_service.cpp
)

target_compile_features(kivo_cinema_engine PUBLIC cxx_std_20)

target_include_directories(kivo_cinema_engine
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

add_executable(kivo_fake_session_test
  tests/fake_backend/fake_engine_api_scenario_test.cpp
  tests/fake_backend/fake_session_scenario_test.cpp
)

target_link_libraries(kivo_fake_session_test PRIVATE kivo_cinema_engine)

add_executable(kivo_contract_gate_test
  tests/contract_gates/diagnostic_redaction_gate_test.cpp
  tests/contract_gates/playback_invariant_test.cpp
)

target_link_libraries(kivo_contract_gate_test PRIVATE kivo_cinema_engine)

add_executable(kivo_engine_api_test
  tests/engine_api/engine_api_boundary_test.cpp
)

target_link_libraries(kivo_engine_api_test PRIVATE kivo_cinema_engine)

add_executable(kivo_session_ledger_test
  tests/session_ledger/session_ledger_store_test.cpp
)

target_link_libraries(kivo_session_ledger_test PRIVATE kivo_cinema_engine)

add_executable(kivo_playback_core_test
  tests/playback_core/fake_playback_state_machine_test.cpp
)

target_link_libraries(kivo_playback_core_test PRIVATE kivo_cinema_engine)

add_executable(kivo_graph_core_test
  tests/graph_core/fake_graph_runtime_test.cpp
)

target_link_libraries(kivo_graph_core_test PRIVATE kivo_cinema_engine)

add_executable(kivo_media_pipeline_contract_test
  tests/media_pipeline/media_pipeline_contract_test.cpp
)

target_link_libraries(kivo_media_pipeline_contract_test PRIVATE kivo_cinema_engine)

add_executable(kivo_color_hdr_presenter_test
  tests/color_hdr_presenter/color_hdr_presenter_contract_test.cpp
)

target_link_libraries(kivo_color_hdr_presenter_test PRIVATE kivo_cinema_engine)

add_executable(kivo_audio_subtitle_test
  tests/audio_subtitle/audio_subtitle_contract_test.cpp
)

target_link_libraries(kivo_audio_subtitle_test PRIVATE kivo_cinema_engine)

add_executable(kivo_inspector_diagnostic_test
  tests/inspector_diagnostic/inspector_diagnostic_contract_test.cpp
)
target_link_libraries(kivo_inspector_diagnostic_test PRIVATE kivo_cinema_engine)

add_executable(kivo_inspector_runtime_test
  tests/playback_inspector_core/inspector_runtime_test.cpp
)
target_link_libraries(kivo_inspector_runtime_test PRIVATE kivo_cinema_engine)

add_executable(kivo_policy_compliance_resource_test
  tests/policy_compliance_resource/policy_compliance_resource_contract_test.cpp
)

target_link_libraries(kivo_policy_compliance_resource_test PRIVATE kivo_cinema_engine)

add_executable(kivo_adapter_boundary_test
  tests/adapter_boundary/adapter_boundary_test.cpp
)

target_link_libraries(kivo_adapter_boundary_test PRIVATE kivo_cinema_engine)

add_executable(kivo_capability_eligibility_test
  tests/capability_core/playback_eligibility_test.cpp
)

add_executable(kivo_playback_state_machine_test
  tests/playback_core/playback_session_state_machine_test.cpp
)

target_link_libraries(kivo_capability_eligibility_test PRIVATE kivo_cinema_engine)

target_link_libraries(kivo_playback_state_machine_test PRIVATE kivo_cinema_engine)

add_executable(kivo_preference_test
  tests/preference_core/preference_snapshot_test.cpp
)
target_link_libraries(kivo_preference_test PRIVATE kivo_cinema_engine)

add_executable(kivo_timebase_test
  tests/media_timeline_core/timebase_normalization_test.cpp
)
target_link_libraries(kivo_timebase_test PRIVATE kivo_cinema_engine)

add_executable(kivo_master_clock_test
  tests/media_timeline_core/master_clock_av_sync_test.cpp
)
target_link_libraries(kivo_master_clock_test PRIVATE kivo_cinema_engine)

add_executable(kivo_playback_command_test
  tests/engine_api/playback_command_test.cpp
)
target_link_libraries(kivo_playback_command_test PRIVATE kivo_cinema_engine)

add_executable(kivo_file_identity_test
  tests/source_core/file_identity_test.cpp
)
target_link_libraries(kivo_file_identity_test PRIVATE kivo_cinema_engine)

add_executable(kivo_local_file_source_test
  tests/source_core/local_file_source_test.cpp
)
target_link_libraries(kivo_local_file_source_test PRIVATE kivo_cinema_engine)

add_executable(kivo_probe_service_test
  tests/demux_core/probe_service_test.cpp
)
target_link_libraries(kivo_probe_service_test PRIVATE kivo_cinema_engine)

add_executable(kivo_frame_queue_test
  tests/decode_core/frame_queue_test.cpp
)
target_link_libraries(kivo_frame_queue_test PRIVATE kivo_cinema_engine)

add_executable(kivo_memory_budget_test
  tests/resource_core/memory_budget_test.cpp
)
target_link_libraries(kivo_memory_budget_test PRIVATE kivo_cinema_engine)

add_executable(kivo_scheduling_policy_test
  tests/scheduling_core/scheduling_policy_test.cpp
)
target_link_libraries(kivo_scheduling_policy_test PRIVATE kivo_cinema_engine)

add_executable(kivo_demux_runtime_test
  tests/demux_core/demux_runtime_test.cpp
)
target_link_libraries(kivo_demux_runtime_test PRIVATE kivo_cinema_engine)

add_executable(kivo_decode_runtime_test
  tests/decode_core/decode_runtime_test.cpp
)
target_link_libraries(kivo_decode_runtime_test PRIVATE kivo_cinema_engine)

add_executable(kivo_sdr_upload_visual_quality_test
  tests/video_render_core/sdr_upload_visual_quality_test.cpp
)
target_link_libraries(kivo_sdr_upload_visual_quality_test PRIVATE kivo_cinema_engine)

add_executable(kivo_flip_presenter_first_frame_test
  tests/video_render_core/flip_presenter_first_frame_test.cpp
)
target_link_libraries(kivo_flip_presenter_first_frame_test PRIVATE kivo_cinema_engine)

add_executable(kivo_audio_endpoint_test
  tests/audio_core/audio_endpoint_test.cpp
)
target_link_libraries(kivo_audio_endpoint_test PRIVATE kivo_cinema_engine)

add_executable(kivo_user_perceived_quality_test
  tests/quality_core/user_perceived_quality_test.cpp
)
target_link_libraries(kivo_user_perceived_quality_test PRIVATE kivo_cinema_engine)

add_executable(kivo_local_file_playback_gate_test
  tests/end_to_end/local_file_playback_gate_test.cpp
)
target_link_libraries(kivo_local_file_playback_gate_test PRIVATE kivo_cinema_engine)

add_executable(kivo_bdmv_probe_test
  tests/disc_core/bdmv_probe_test.cpp
)
target_link_libraries(kivo_bdmv_probe_test PRIVATE kivo_cinema_engine)

add_executable(kivo_bdmv_playlist_duplicate_test
  tests/disc_core/bdmv_playlist_duplicate_test.cpp
)
target_link_libraries(kivo_bdmv_playlist_duplicate_test PRIVATE kivo_cinema_engine)

add_executable(kivo_bdmv_main_title_test
  tests/disc_core/bdmv_main_title_test.cpp
)
target_link_libraries(kivo_bdmv_main_title_test PRIVATE kivo_cinema_engine)

add_executable(kivo_bdmv_playback_gate_test
  tests/disc_core/bdmv_playback_gate_test.cpp
)
target_link_libraries(kivo_bdmv_playback_gate_test PRIVATE kivo_cinema_engine)

enable_testing()
add_test(NAME kivo_fake_session_test COMMAND kivo_fake_session_test)
add_test(NAME kivo_contract_gate_test COMMAND kivo_contract_gate_test)
add_test(NAME kivo_engine_api_test COMMAND kivo_engine_api_test)
add_test(NAME kivo_session_ledger_test COMMAND kivo_session_ledger_test)
add_test(NAME kivo_playback_core_test COMMAND kivo_playback_core_test)
add_test(NAME kivo_graph_core_test COMMAND kivo_graph_core_test)
add_test(NAME kivo_media_pipeline_contract_test COMMAND kivo_media_pipeline_contract_test)
add_test(NAME kivo_color_hdr_presenter_test COMMAND kivo_color_hdr_presenter_test)
add_test(NAME kivo_audio_subtitle_test COMMAND kivo_audio_subtitle_test)
add_test(NAME kivo_inspector_diagnostic_test COMMAND kivo_inspector_diagnostic_test)
add_test(NAME kivo_inspector_runtime_test COMMAND kivo_inspector_runtime_test)
add_test(NAME kivo_policy_compliance_resource_test COMMAND kivo_policy_compliance_resource_test)
add_test(NAME kivo_adapter_boundary_test COMMAND kivo_adapter_boundary_test)
add_test(NAME kivo_capability_eligibility_test COMMAND kivo_capability_eligibility_test)
add_test(NAME kivo_playback_state_machine_test COMMAND kivo_playback_state_machine_test)
add_test(NAME kivo_preference_test COMMAND kivo_preference_test)
add_test(NAME kivo_timebase_test COMMAND kivo_timebase_test)
add_test(NAME kivo_master_clock_test COMMAND kivo_master_clock_test)
add_test(NAME kivo_playback_command_test COMMAND kivo_playback_command_test)
add_test(NAME kivo_file_identity_test COMMAND kivo_file_identity_test)
add_test(NAME kivo_local_file_source_test COMMAND kivo_local_file_source_test)
add_test(NAME kivo_probe_service_test COMMAND kivo_probe_service_test)
add_test(NAME kivo_frame_queue_test COMMAND kivo_frame_queue_test)
add_test(NAME kivo_memory_budget_test COMMAND kivo_memory_budget_test)
add_test(NAME kivo_scheduling_policy_test COMMAND kivo_scheduling_policy_test)
add_test(NAME kivo_demux_runtime_test COMMAND kivo_demux_runtime_test)
add_test(NAME kivo_decode_runtime_test COMMAND kivo_decode_runtime_test)
add_test(NAME kivo_sdr_upload_visual_quality_test COMMAND kivo_sdr_upload_visual_quality_test)
add_test(NAME kivo_flip_presenter_first_frame_test COMMAND kivo_flip_presenter_first_frame_test)
add_test(NAME kivo_audio_endpoint_test COMMAND kivo_audio_endpoint_test)
add_test(NAME kivo_user_perceived_quality_test COMMAND kivo_user_perceived_quality_test)
add_test(NAME kivo_local_file_playback_gate_test COMMAND kivo_local_file_playback_gate_test)
add_test(NAME kivo_bdmv_probe_test COMMAND kivo_bdmv_probe_test)
add_test(NAME kivo_bdmv_playlist_duplicate_test COMMAND kivo_bdmv_playlist_duplicate_test)
add_test(NAME kivo_bdmv_main_title_test COMMAND kivo_bdmv_main_title_test)
add_test(NAME kivo_bdmv_playback_gate_test COMMAND kivo_bdmv_playback_gate_test)

add_executable(kivo_source_adapter_test
  tests/source_core/source_adapter_test.cpp
)
target_link_libraries(kivo_source_adapter_test PRIVATE kivo_cinema_engine)

add_test(NAME kivo_source_adapter_test COMMAND kivo_source_adapter_test)

add_executable(kivo_network_security_test
  tests/security_core/network_security_test.cpp
)
target_link_libraries(kivo_network_security_test PRIVATE kivo_cinema_engine)

add_test(NAME kivo_network_security_test COMMAND kivo_network_security_test)

add_executable(kivo_source_health_test
  tests/source_core/source_health_test.cpp
)
target_link_libraries(kivo_source_health_test PRIVATE kivo_cinema_engine)

add_test(NAME kivo_source_health_test COMMAND kivo_source_health_test)

add_executable(kivo_range_reader_test
  tests/network_cache_core/range_reader_test.cpp
)
target_link_libraries(kivo_range_reader_test PRIVATE kivo_cinema_engine)

add_test(NAME kivo_range_reader_test COMMAND kivo_range_reader_test)

add_executable(kivo_segment_cache_test
  tests/network_cache_core/segment_cache_test.cpp
)
target_link_libraries(kivo_segment_cache_test PRIVATE kivo_cinema_engine)

add_test(NAME kivo_segment_cache_test COMMAND kivo_segment_cache_test)

add_executable(kivo_webdav_profile_test
  tests/source_core/webdav_profile_test.cpp
)
target_link_libraries(kivo_webdav_profile_test PRIVATE kivo_cinema_engine)

add_test(NAME kivo_webdav_profile_test COMMAND kivo_webdav_profile_test)

add_executable(kivo_webdav_range_playback_test
  tests/source_core/webdav_range_playback_test.cpp
)
target_link_libraries(kivo_webdav_range_playback_test PRIVATE kivo_cinema_engine)

add_test(NAME kivo_webdav_range_playback_test COMMAND kivo_webdav_range_playback_test)

add_executable(kivo_alist_profile_test
  tests/source_core/alist_profile_test.cpp
)
target_link_libraries(kivo_alist_profile_test PRIVATE kivo_cinema_engine)

add_test(NAME kivo_alist_profile_test COMMAND kivo_alist_profile_test)

add_executable(kivo_alist_direct_link_test
  tests/source_core/alist_direct_link_test.cpp
)
target_link_libraries(kivo_alist_direct_link_test PRIVATE kivo_cinema_engine)

add_test(NAME kivo_alist_direct_link_test COMMAND kivo_alist_direct_link_test)

add_executable(kivo_emby_session_test
  tests/source_core/emby_session_test.cpp
)
target_link_libraries(kivo_emby_session_test PRIVATE kivo_cinema_engine)

add_test(NAME kivo_emby_session_test COMMAND kivo_emby_session_test)
